--- a/templates/chooseExistedGroups.html
+++ b/templates/chooseExistedGroups.html
@@ -4,32 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Choose Existing Groups</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        form {
+            padding: 20px;
+        }
+        label {
+            display: block;
+            margin-bottom: 10px;
+        }
+        input[type="checkbox"] {
+            margin-right: 10px;
+        }
+        button {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <h1>Choose Existing Groups</h1>
-    <!-- <form action="/process-groups" method="POST">
-        <fieldset>
-            <legend>Select Groups:</legend>
-            <ul>
-                {% for group in groups %}
-                <li>
-                    <input type="checkbox" id="group_{{ group.Group_id }}" name="groups[]" value="{{ group.Group_id }}">
-                    <label for="group_{{ group.Group_id }}">{{ group.Group_name }}</label>
-                </li>
-                {% endfor %}
-            </ul>
-        </fieldset>
-        <button type="submit">Submit</button>
-    </form> -->
-    <form action="/home" method="POST">
-        {% for group in groups %}
-        <!-- {{ group[0] }}
-        {{ group[1]}} -->
-            <input type="checkbox" id="group_{{ group[0] }}" name="groups[]" value="{{ group[2] }}">
-            <label for="group_{{ group[0] }}"> {{ group[1] }}</label><br>
-        <!-- </form> -->
-        {% endfor %}
-        <button type="submit">Done</button>
-    </form>
+    <div class="container">
+        <h1>Choose Existing Groups</h1>
+        <form action="/home" method="POST">
+            {% for group in groups %}
+            <label>
+                <input type="checkbox" id="group_{{ group[0] }}" name="groups[]" value="{{ group[2] }}">
+                {{ group[1] }}
+            </label>
+            {% endfor %}
+            <button type="submit">Done</button>
+        </form>
+    </div>
 </body>
 </html>
