--- a/templates/insertRecipient.html
+++ b/templates/insertRecipient.html
@@ -48,7 +48,7 @@
         }
 
         input[type="submit"] {
-            background-color: #4caf50;
+            background-color: #007bff;
             color: white;
             padding: 10px 20px;
             border: none;
