--- a/templates/insertRecipient.html
+++ b/templates/insertRecipient.html
@@ -59,7 +59,7 @@
         }
 
         input[type="submit"]:hover {
-            background-color: #45a049;
+            background-color: #007bff;
         }
     </style>
 </head>
